<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cambiarCamara"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/action_switch_camera" />
    <item
        android:id="@+id/cambiarResolucion"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_change_resolution">
        <menu>
            <item
                android:id="@+id/resolucion_800x600"
                android:title="@string/option_high_resolution" />
            <item
                android:id="@+id/resolucion_640x480"
                android:title="@string/option_medium_resolution" />
            <item
                android:id="@+id/resolucion_320x240"
                android:title="@string/option_low_resolution" />
        </menu>
    </item>
</menu>